# spark2sql

./: .gitignore  CLAUDE.md  HANDOVER.md  README.md  docker-compose.yml  pyproject.toml
base_code/: sample_basic.py  sample_udf.py
converter/: __init__.py  emitter.py  ir.py  parser.py  transformer.py
converter/rules/: __init__.py  functions.py  types.py
docs/: pyspark_syntax_guide.md
fixtures/data/: customers.csv  orders.csv  products.csv  schemas.json
fixtures/pipelines/: sample.ipynb  sample_complex_window.py  sample_nested_select.py
scripts/: batch_convert.py  convert.py
tests/integration/: test_duckdb_validation.py  test_pipeline_validation.py
tests/unit/: test_parser.py  test_transformer.py
validator/: __init__.py  comparator.py  duckdb_runner.py  spark_runner.py
work/spark/: sample.ipynb
work/spark/.ipynb_checkpoints/: sample-checkpoint.ipynb
