[project]
name = "pyspark-to-bq-converter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
